Adding cybera add cyberabot Action

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,7 @@ openstack.cli.extension =
 
 openstack.cybera.v1 =
     cybera server list = cybera_osc.v1.cybera_cli:CliServerList
+    cybera add cyberabot = cybera_osc.v1.cybera_cli:CliAddCyberabotToProjects
 
 [wheel]
 universal = 1
