Adding some more tasks

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,8 +16,12 @@ openstack.cli.extension =
     cybera = cybera_osc.osc
 
 openstack.cybera.v1 =
-    cybera server list = cybera_osc.v1.cybera_cli:CliServerList
-    cybera add cyberabot = cybera_osc.v1.cybera_cli:CliAddCyberabotToProjects
+    cybera add cyberabot = cybera_osc.v1:CliAddCyberabotToProjects
+    cybera hypervisor stats = cybera_osc.v1:CliHypervisorStats
+    cybera project cleanup = cybera_osc.v1:CliProjectCleanup
+    cybera server list = cybera_osc.v1:CliServerList
+    cybera test = cybera_osc.v1:CliTest
+    cybera user cleanup = cybera_osc.v1:CliUserCleanup
 
 [wheel]
 universal = 1
