Bulk commit of various actions/utils

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = cybera_osc
 summary = OpenStack plugins for Cybera
 description-file =
-    README.rst
+    README.md
 author = Cybera
 author-email = sysadmin@cybera.ca
 home-page = http://cybera.ca
@@ -17,11 +17,18 @@ openstack.cli.extension =
 
 openstack.cybera.v1 =
     cybera add cyberabot = cybera_osc.v1:CliAddCyberabotToProjects
+    cybera floating ip delete = cybera_osc.v1:CliFloatingIPDelete
     cybera hypervisor stats = cybera_osc.v1:CliHypervisorStats
+    cybera project artifacts = cybera_osc.v1:CliProjectArtifacts
     cybera project cleanup = cybera_osc.v1:CliProjectCleanup
+    cybera project search = cybera_osc.v1:CliProjectFuzzySearch
+    cybera project user add = cybera_osc.v1:CliProjectUserAdd
+    cybera security group list = cybera_osc.v1:CliSecurityGroupList
     cybera server list = cybera_osc.v1:CliServerList
     cybera test = cybera_osc.v1:CliTest
     cybera user cleanup = cybera_osc.v1:CliUserCleanup
+    cybera user membership = cybera_osc.v1:CliUserMembership
+    cybera user search = cybera_osc.v1:CliUserFuzzySearch
 
 [wheel]
 universal = 1
