Adding floating_ip_show command

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,7 @@ openstack.cli.extension =
 openstack.cybera.v1 =
     cybera add cyberabot = cybera_osc.v1:CliAddCyberabotToProjects
     cybera floating ip delete = cybera_osc.v1:CliFloatingIPDelete
+    cybera floating ip show = cybera_osc.v1:CliFloatingIPShow
     cybera hypervisor stats = cybera_osc.v1:CliHypervisorStats
     cybera project artifacts = cybera_osc.v1:CliProjectArtifacts
     cybera project cleanup = cybera_osc.v1:CliProjectCleanup
