Working image share and refactor fuzzy search

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,8 @@ openstack.cybera.v1 =
     cybera floating ip delete = cybera_osc.v1:CliFloatingIPDelete
     cybera floating ip show = cybera_osc.v1:CliFloatingIPShow
     cybera hypervisor stats = cybera_osc.v1:CliHypervisorStats
+    cybera image search = cybera_osc.v1:CliImageFuzzySearch
+    cybera image share = cybera_osc.v1:CliImageSharing
     cybera project artifacts = cybera_osc.v1:CliProjectArtifacts
     cybera project cleanup = cybera_osc.v1:CliProjectCleanup
     cybera project search = cybera_osc.v1:CliProjectFuzzySearch
