added network provider create plugin

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,7 @@ openstack.cybera.v1 =
     cybera hypervisor stats = cybera_osc.v1:CliHypervisorStats
     cybera image search = cybera_osc.v1:CliImageFuzzySearch
     cybera image share = cybera_osc.v1:CliImageSharing
+    cybera network provider create = cybera_osc.v1:CliCreateProvider
     cybera project artifacts = cybera_osc.v1:CliProjectArtifacts
     cybera project cleanup = cybera_osc.v1:CliProjectCleanup
     cybera project search = cybera_osc.v1:CliProjectFuzzySearch
