network create complete; objects/containers complete

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,6 +33,9 @@ openstack.cybera.v1 =
     cybera user cleanup = cybera_osc.v1:CliUserCleanup
     cybera user membership = cybera_osc.v1:CliUserMembership
     cybera user search = cybera_osc.v1:CliUserFuzzySearch
+    cybera container create = cybera_osc.v1:CliCreateContainer
+    cybera object create = cybera_osc.v1:CliCreateObject
+    cybera jttest = cybera_osc.v1:CliJTTest
 
 [wheel]
 universal = 1
