--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,7 @@ openstack.cybera.v1 =
     cybera project user add = cybera_osc.v1:CliProjectUserAdd
     cybera security group list = cybera_osc.v1:CliSecurityGroupList
     cybera server list = cybera_osc.v1:CliServerList
+    cybera subnet vfs create = cybera_osc.v1:CliCreateVFSSubnet
     cybera test = cybera_osc.v1:CliTest
     cybera user cleanup = cybera_osc.v1:CliUserCleanup
     cybera user membership = cybera_osc.v1:CliUserMembership
