--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,7 @@ openstack.cybera.v1 =
     cybera floating ip show = cybera_osc.v1:CliFloatingIPShow
     cybera hypervisor stats = cybera_osc.v1:CliHypervisorStats
     cybera image search = cybera_osc.v1:CliImageFuzzySearch
+    cybera image latest = cybera_osc.v1:CliImageLatest
     cybera image share = cybera_osc.v1:CliImageSharing
     cybera network list = cybera_osc.v1:CliNetworkList
     cybera network provider create = cybera_osc.v1:CliCreateProvider
@@ -30,6 +31,7 @@ openstack.cybera.v1 =
     cybera project user add = cybera_osc.v1:CliProjectUserAdd
     cybera security group list = cybera_osc.v1:CliSecurityGroupList
     cybera server list = cybera_osc.v1:CliServerList
+    cybera subnet list = cybera_osc.v1:CliSubnetList
     cybera subnet vfs create = cybera_osc.v1:CliCreateVFSSubnet
     cybera test = cybera_osc.v1:CliTest
     cybera user cleanup = cybera_osc.v1:CliUserCleanup
@@ -37,6 +39,9 @@ openstack.cybera.v1 =
     cybera user search = cybera_osc.v1:CliUserFuzzySearch
     cybera container create = cybera_osc.v1:CliCreateContainer
     cybera object create = cybera_osc.v1:CliCreateObject
+    cybera vfs instance upgradeable = cybera_osc.v1:CliVFSInstanceUpgradeable
+    cybera vfs destroy instance = cybera_osc.v1:CliVFSDestroyInstance
+    cybera vfs launch instance = cybera_osc.v1:CliVFSLaunchInstance
     cybera jttest = cybera_osc.v1:CliJTTest
 
 [wheel]
