--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,8 @@ openstack.cli.extension =
 
 openstack.cybera.v1 =
     cybera add cyberabot = cybera_osc.v1:CliAddCyberabotToProjects
+    cybera container create = cybera_osc.v1:CliCreateContainer
+    cybera flavor search = cybera_osc.v1:CliFlavorFuzzySearch
     cybera floating ip delete = cybera_osc.v1:CliFloatingIPDelete
     cybera floating ip show = cybera_osc.v1:CliFloatingIPShow
     cybera hypervisor stats = cybera_osc.v1:CliHypervisorStats
@@ -25,6 +27,7 @@ openstack.cybera.v1 =
     cybera image share = cybera_osc.v1:CliImageSharing
     cybera network list = cybera_osc.v1:CliNetworkList
     cybera network provider create = cybera_osc.v1:CliCreateProvider
+    cybera object create = cybera_osc.v1:CliCreateObject
     cybera project artifacts = cybera_osc.v1:CliProjectArtifacts
     cybera project cleanup = cybera_osc.v1:CliProjectCleanup
     cybera project search = cybera_osc.v1:CliProjectFuzzySearch
@@ -37,8 +40,6 @@ openstack.cybera.v1 =
     cybera user cleanup = cybera_osc.v1:CliUserCleanup
     cybera user membership = cybera_osc.v1:CliUserMembership
     cybera user search = cybera_osc.v1:CliUserFuzzySearch
-    cybera container create = cybera_osc.v1:CliCreateContainer
-    cybera object create = cybera_osc.v1:CliCreateObject
     cybera vfs instance upgradeable = cybera_osc.v1:CliVFSInstanceUpgradeable
     cybera vfs destroy instance = cybera_osc.v1:CliVFSDestroyInstance
     cybera vfs launch instance = cybera_osc.v1:CliVFSLaunchInstance
