Adding actions for deleting security group rules and listing user roles

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,13 +32,16 @@ openstack.cybera.v1 =
     cybera project cleanup = cybera_osc.v1:CliProjectCleanup
     cybera project search = cybera_osc.v1:CliProjectFuzzySearch
     cybera project user add = cybera_osc.v1:CliProjectUserAdd
+    cybera project user remove = cybera_osc.v1:CliProjectUserRemove
     cybera security group list = cybera_osc.v1:CliSecurityGroupList
+    cybera security group rule delete = cybera_osc.v1:CliSecurityGroupRuleDelete
     cybera server list = cybera_osc.v1:CliServerList
     cybera subnet list = cybera_osc.v1:CliSubnetList
     cybera subnet vfs create = cybera_osc.v1:CliCreateVFSSubnet
     cybera test = cybera_osc.v1:CliTest
     cybera user cleanup = cybera_osc.v1:CliUserCleanup
     cybera user membership = cybera_osc.v1:CliUserMembership
+    cybera user role list = cybera_osc.v1:CliUserRoleList
     cybera user search = cybera_osc.v1:CliUserFuzzySearch
     cybera vfs instance upgradeable = cybera_osc.v1:CliVFSInstanceUpgradeable
     cybera vfs destroy instance = cybera_osc.v1:CliVFSDestroyInstance
