--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,7 @@ openstack.cybera.v1 =
     cybera container create = cybera_osc.v1:CliCreateContainer
     cybera flavor search = cybera_osc.v1:CliFlavorFuzzySearch
     cybera floating ip delete = cybera_osc.v1:CliFloatingIPDelete
+    cybera floating ip list = cybera_osc.v1:CliFloatingIPList
     cybera floating ip show = cybera_osc.v1:CliFloatingIPShow
     cybera hypervisor stats = cybera_osc.v1:CliHypervisorStats
     cybera image search = cybera_osc.v1:CliImageFuzzySearch
