Switch to exact matches for everything

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,12 +18,12 @@ openstack.cli.extension =
 openstack.cybera.v1 =
     cybera add cyberabot = cybera_osc.v1:CliAddCyberabotToProjects
     cybera container create = cybera_osc.v1:CliCreateContainer
-    cybera flavor search = cybera_osc.v1:CliFlavorFuzzySearch
+    cybera flavor search = cybera_osc.v1:CliFlavorSearch
     cybera floating ip delete = cybera_osc.v1:CliFloatingIPDelete
     cybera floating ip list = cybera_osc.v1:CliFloatingIPList
     cybera floating ip show = cybera_osc.v1:CliFloatingIPShow
     cybera hypervisor stats = cybera_osc.v1:CliHypervisorStats
-    cybera image search = cybera_osc.v1:CliImageFuzzySearch
+    cybera image search = cybera_osc.v1:CliImageSearch
     cybera image latest = cybera_osc.v1:CliImageLatest
     cybera image share = cybera_osc.v1:CliImageSharing
     cybera network list = cybera_osc.v1:CliNetworkList
@@ -31,7 +31,7 @@ openstack.cybera.v1 =
     cybera object create = cybera_osc.v1:CliCreateObject
     cybera project artifacts = cybera_osc.v1:CliProjectArtifacts
     cybera project cleanup = cybera_osc.v1:CliProjectCleanup
-    cybera project search = cybera_osc.v1:CliProjectFuzzySearch
+    cybera project search = cybera_osc.v1:CliProjectSearch
     cybera project user add = cybera_osc.v1:CliProjectUserAdd
     cybera project user remove = cybera_osc.v1:CliProjectUserRemove
     cybera security group list = cybera_osc.v1:CliSecurityGroupList
@@ -43,7 +43,7 @@ openstack.cybera.v1 =
     cybera user cleanup = cybera_osc.v1:CliUserCleanup
     cybera user membership = cybera_osc.v1:CliUserMembership
     cybera user role list = cybera_osc.v1:CliUserRoleList
-    cybera user search = cybera_osc.v1:CliUserFuzzySearch
+    cybera user search = cybera_osc.v1:CliUserSearch
     cybera vfs instance upgradeable = cybera_osc.v1:CliVFSInstanceUpgradeable
     cybera vfs destroy instance = cybera_osc.v1:CliVFSDestroyInstance
     cybera vfs launch instance = cybera_osc.v1:CliVFSLaunchInstance
@@ -51,4 +51,3 @@ openstack.cybera.v1 =
 
 [wheel]
 universal = 1
-
