Adding some image sharing commands

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,7 @@ openstack.cybera.v1 =
     cybera image search = cybera_osc.v1:CliImageSearch
     cybera image latest = cybera_osc.v1:CliImageLatest
     cybera image share = cybera_osc.v1:CliImageSharing
+    cybera image share list = cybera_osc.v1:CliImageShareList
     cybera network list = cybera_osc.v1:CliNetworkList
     cybera network provider create = cybera_osc.v1:CliCreateProvider
     cybera object create = cybera_osc.v1:CliCreateObject
@@ -44,8 +45,10 @@ openstack.cybera.v1 =
     cybera user membership = cybera_osc.v1:CliUserMembership
     cybera user role list = cybera_osc.v1:CliUserRoleList
     cybera user search = cybera_osc.v1:CliUserSearch
-    cybera vfs instance upgradeable = cybera_osc.v1:CliVFSInstanceUpgradeable
     cybera vfs destroy instance = cybera_osc.v1:CliVFSDestroyInstance
+    cybera vfs image share to all = cybera_osc.v1:CliVFSShareImageToAll
+    cybera vfs image unshare from all = cybera_osc.v1:CliVFSUnshareImageFromAll
+    cybera vfs instance upgradeable = cybera_osc.v1:CliVFSInstanceUpgradeable
     cybera vfs launch instance = cybera_osc.v1:CliVFSLaunchInstance
     cybera jttest = cybera_osc.v1:CliJTTest
 
