Adding command to list vlan firewalls that need cleared

--- a/setup.cfg
+++ b/setup.cfg
@@ -50,6 +50,7 @@ openstack.cybera.v1 =
     cybera vfs image unshare from all = cybera_osc.v1:CliVFSUnshareImageFromAll
     cybera vfs instance upgradeable = cybera_osc.v1:CliVFSInstanceUpgradeable
     cybera vfs launch instance = cybera_osc.v1:CliVFSLaunchInstance
+    cybera vfs list clear vlan firewalls = cybera_osc.v1:CliVFSClearVLANFirewalls
     cybera jttest = cybera_osc.v1:CliJTTest
 
 [wheel]
